横屏显示，并维持数据

--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -19,6 +19,7 @@
         android:layout_marginBottom="32dp"
         android:background="#bdbbbb"
 
+        android:onClick="setBtn"
         android:text="RESET" />
     <LinearLayout
         android:orientation="vertical"
